src/objects/Enquiry__c.object
<CustomObject>
    <fields>
        <fullName>AC__c</fullName>
        <label>AC</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ASM_Genset__c</fullName>
        <label>ASM Genset</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Ankush Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satpal Dabas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajeev Bhardwaj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheetal Kumar Pal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Ravi Kumar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajeev Raman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <label>Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Response__c</fullName>
        <label>Audit Response</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BM_Name__c</fullName>
        <label>BM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Requirement__c</fullName>
        <label>Backup Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Feedback__c</fullName>
        <label>Call Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Competion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manager Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM/RM Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Call Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Owner_Name__c</fullName>
        <label>Call Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertedContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertedDate__c</fullName>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConvertedOpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Enquiry_Notes__c</fullName>
        <label>Customer Enquiry Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Profile__c</fullName>
        <label>Customer Profile</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate - Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Verbatim__c</fullName>
        <label>Customer Verbatim</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Enquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealership Enquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Rep__c</fullName>
        <label>Email Sales Rep</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry_Forward__c</fullName>
        <label>Enquiry Forward</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Query</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Final_Status__c</fullName>
        <label>Final Status</label>
        <picklist>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>IF(ISNULL(TEXT(Salutation__c)), &apos;&apos;, TEXT(Salutation__c)+ &apos; &apos;)  + IF( ISNULL( FirstName__c ),&apos;&apos; ,FirstName__c + &apos;  &apos; ) + IF( ISNULL(LastName__c ),&apos;&apos; , LastName__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Happy_Feet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Happy Feet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Manager__c</fullName>
        <label>Key Account Manager</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>CHANDRA PRAKASH PANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NITIN ASTHANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJESH SRIVASTVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRISHNENDU SEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANTOSH JOSHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L.SURESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHRINIVAS RAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGAR SUDHAKAR PATIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAHUL KULKARNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOHAN D BONDE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastTransferDate__c</fullName>
        <label>LastTransferDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Brochure/Flyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by a friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Entered_By__c</fullName>
        <label>Lead Entered By</label>
        <picklist>
            <picklistValues>
                <fullName>Shubham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meenakshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheeba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manju</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neetu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randhir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Passed_To__c</fullName>
        <label>Lead Passed To</label>
        <picklist>
            <picklistValues>
                <fullName>Product Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM/RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Sales Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Transfer_Date__c</fullName>
        <label>Lead Transfer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Next_Followup_Date__c</fullName>
        <label>Next Followup Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Of_Fans__c</fullName>
        <label>No Of Fans</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Lights__c</fullName>
        <label>No Of Lights</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>No. of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presently_Using_Inverter__c</fullName>
        <label>Presently Using Inverter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Requested__c</fullName>
        <label>Pricing Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Inverter/UPS – Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter/UPS – Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate batteries (Car/Truck/Tractor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Accessories</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <label>Product Manager</label>
        <picklist>
            <controllingField>Product_Category__c</controllingField>
            <picklistValues>
                <fullName>Rajnish Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harpreet Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Kukreja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rupesh Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puneet Chabra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudrendu Dutta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renu Chauhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>exports@su-kam.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shweta Mehta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Solution_Pitched__c</fullName>
        <label>Product Solution Pitched</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Generated__c</fullName>
        <label>Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Space_Available__c</fullName>
        <label>Roof Space Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Enquiry__c</fullName>
        <displayFormat>SE-{000000}</displayFormat>
        <label>Sale Enquiry</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Feedback__c</fullName>
        <label>Sales Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Product Details Discussed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure Pending with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Awaited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_Owner__c</fullName>
        <label>Sales Lead Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Rajnish Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harpreet Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Kukreja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rupesh Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puneet Chabra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudrendu Dutta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renu Chauhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>exports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shweta Mehta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vikas Beniwal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Mobile_Number__c</fullName>
        <label>Sales Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Source__c</fullName>
        <label>Secondary Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>